# synth_ui_lib

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  justfile  library.json  ui-widget-summary.org
bindings/: synth_ui.py
examples/: anim_demo.cpp  audio_reactive_demo.cpp
graphify-out/: .graphify_labels.json  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: ui.c  ui.h  ui_button.c  ui_button.h  ui_checkbox.c  ui_checkbox.h  ui_dialog.h  ui_font_5x7.h  ui_hbar.c  ui_hbar.h  ui_icons.h  ui_panel.c  ui_panel.h  ui_radio.c  ui_radio.h  ui_scrollbar.h  ui_selection_list.h  ui_slider.c  ui_slider.h  ui_stepper.h  ui_tabs.h  ui_text_helpers.h  ui_textfield.c  ui_textfield.h  ui_toggle.c  ui_toggle.h  ui_track_palette.c  ui_track_palette.h
src/ui/: anim.cpp  anim.h  anim_source.h  button.cpp  button.h  checkbox.cpp  checkbox.h  colors.cpp  colors.h  divider.h  dropdown.cpp  dropdown.h  easing.h  font.h  frame.h  framebuffer.cpp  framebuffer.h  graph.cpp  graph.h  grid.h  hbar.cpp  hbar.h  icons.h  infobar.cpp  infobar.h  keyboard.cpp  keyboard.h  label.cpp  label.h  layout.cpp  layout.h  meter_array.cpp  meter_array.h  page_indicator.cpp  page_indicator.h  page_layout.cpp  page_layout.h  panel.cpp  panel.h  popup_menu.cpp  (+40 more)
test/: CMakeLists.txt  test_colors.cpp  test_easing.cpp  test_framebuffer.cpp  test_layout.cpp  test_page_layout.cpp  test_rect.cpp  test_timeline.cpp  test_touch_calibration.cpp  test_touch_dispatcher.cpp  test_tween.cpp  test_widget.cpp
